# rpi_monitoring

./: .gitignore  README.md  pyproject.toml
agents/linux/: agent.py  collector.py
agents/windows/HomelabResourceMonitor.WindowsAgent.Tests/: Program.cs  (+1 more)
deploy/: hub-config.example.json
deploy/linux/: install-agent.sh  uninstall-agent.sh
deploy/raspberry-pi/: add-node-hash.py  install.sh
deploy/systemd/: homelab-resource-monitor-display.service  homelab-resource-monitor-hub.service  homelab-resource-monitor-linux-agent.service  homelab-resource-monitor-power.socket  homelab-resource-monitor-power@.service  homelab-resource-monitor-rapl-permissions.service
deploy/windows/: install.ps1  uninstall.ps1  windows-agent.example.json
display/: app.py  categories.py  detail_model.py  formatting.py  gestures.py  history.py  navigation.py  power_client.py  power_helper.py  renderer.py  ui_state.py
display/assets/: OFL.txt
display/drivers/: ili9341.py  xpt2046.py
docs/: display-ui-phase-0-contract-v1.1-addendum.md  display-ui-phase-0-contract.md
hub/: app.py
protocol/: __init__.py  telemetry-v1.schema.json  telemetry-v2.schema.json  validation.py
protocol/examples/: linux.json  windows-v2.json  windows.json
scripts/: deploy-linux-node.ps1  deploy-pi.ps1  deploy-windows-node.ps1
tests/: test_deploy.py  test_detail_model.py  test_display.py  test_hub.py  test_linux_collector.py  test_power_client.py  test_power_deployment.py  test_power_helper.py  test_telemetry_schema.py  test_ui_state.py
tools/: lcd_test.py  touch_calibrate.py  touch_raw_test.py
(+7 files in other folders)
