[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-resource-monitor"
version = "0.1.0"
description = "Read-only telemetry hub, agents, and SPI display for a Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.2",
    "jsonschema==4.25.1",
]

[project.optional-dependencies]
display = ["Pillow==12.1.0"]

[tool.setuptools.package-data]
protocol = ["*.json"]
display = ["assets/*.ttf", "assets/*.txt"]

[tool.setuptools]
packages = ["agents", "agents.linux", "display", "display.drivers", "hub", "protocol"]
